--- a/sample4.html
+++ b/sample4.html
@@ -8,13 +8,13 @@
 	</head>
 
 	<body>
-		<a href="index.html"><img src ="portforiophoto/title.png" style=
+		<a href="index.html"><img src ="title.png" style=
 			"margin-left: 400px;"width =200 height =40="左のコードは、サイトに写真貼りつけコード"></a>
 
 		<h1>自分を表すロゴマーク</h1>
 
-<img src ="portforiophoto/logo REALCRAFT.png" width =1000 height =600 alt ="左のコードは、サイトに写真貼りつけコード">
-<img src ="portforiophoto/logo REALCRAFT2.png" width =1000 height =600 alt ="左のコードは、サイトに写真貼りつけコード">
-<img src ="portforiophoto/logo REALCRAFT3.png" width =1000 height =600 alt ="左のコードは、サイトに写真貼りつけコード">
-<img src ="portforiophoto/logo REALCRAFT4.png" width =1000 height =600 alt ="左のコードは、サイトに写真貼りつけコード">
-<img src ="portforiophoto/logo REALCRAFT5.png" width =1000 height =600 alt ="左のコードは、サイトに写真貼りつけコード">
+<img src ="logo REALCRAFT.png" width =1000 height =600 alt ="左のコードは、サイトに写真貼りつけコード">
+<img src ="logo REALCRAFT2.png" width =1000 height =600 alt ="左のコードは、サイトに写真貼りつけコード">
+<img src ="logo REALCRAFT3.png" width =1000 height =600 alt ="左のコードは、サイトに写真貼りつけコード">
+<img src ="logo REALCRAFT4.png" width =1000 height =600 alt ="左のコードは、サイトに写真貼りつけコード">
+<img src ="logo REALCRAFT5.png" width =1000 height =600 alt ="左のコードは、サイトに写真貼りつけコード">
