--- a/sampl6.html
+++ b/sampl6.html
@@ -8,9 +8,9 @@
 	</head>
 
 	<body>
-		<a href="index.html"><img src ="portforiophoto/title.png" style=
+		<a href="index.html"><img src ="title.png" style=
 			"margin-left: 400px;"width =200 height =40="左のコードは、サイトに写真貼りつけコード"></a>
 
 		<h1>サンプルシート</h1>
 
-<img src ="portforiophoto/sampleseat.png" width =1000 height =600 alt ="左のコードは、サイトに写真貼りつけコード">
+<img src ="sampleseat.png" width =1000 height =600 alt ="左のコードは、サイトに写真貼りつけコード">
