--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 	</body>
 <a href="sample5.html"><img src="birdhouse.png" width = "1285" height = "962" alt = "画像を貼り付けリンクボタンに"></a>
 		</body>
-<a href="sampl6.html"><img src="sampleseat.png" width = "1285" height = "962" alt = "画像を貼り付けリンクボタンに"></a>
+<a href="sampl6.html"><img src="sampleseat.png" width = "1285" height = "962" alt = "画像を貼り付けリンクボタンにする"></a>
 				</body>
 
 </html>
