--- a/index.html
+++ b/index.html
@@ -31,15 +31,17 @@
 			学校課題、自主制作を記載しています。</p>
 
 
-<a href="sample4.html"><img src="logo REALCRAFT.png" width = "1285" height = "962" alt = "画像を貼り付けリンクボタンに"></a>
+<a href="sample4.html"><img src="portforiophoto/logo REALCRAFT.png" width = "1285" height = "962" alt = "画像を貼り付けリンクボタンに"></a>
 	</body>
-<a href="sample２.html"><img src="clean.png" width = "1285" height = "962" alt = "画像を貼り付けリンクボタンに"></a>
+<a href="sample２.html"><img src="portforiophoto/clean.png" width = "1285" height = "962" alt = "画像を貼り付けリンクボタンに"></a>
 	</body>
-<a href="sample3.html"><img src="hakuhodo.png" width = "1285" height = "962" alt = "画像を貼り付けリンクボタンに"></a>
+<a href="sample3.html"><img src="portforiophoto/hakuhodo.png" width = "1285" height = "962" alt = "画像を貼り付けリンクボタンに"></a>
 	</body>
-<a href="sample5.html"><img src="birdhouse.png" width = "1285" height = "962" alt = "画像を貼り付けリンクボタンに"></a>
+<a href="sample5.html"><img src="portforiophoto/birdhouse.png" width = "1285" height = "962" alt = "画像を貼り付けリンクボタンに"></a>
 		</body>
-<a href="sampl6.html"><img src="sampleseat.png" width = "1285" height = "962" alt = "画像を貼り付けリンクボタンにする"></a>
+<a href="sampl7.html"><img src="portforiophoto/体験デザイン１.png" width = "1285" height = "962" alt = "画像を貼り付けリンクボタンに"></a>
 				</body>
+
+
 
 </html>
