--- a/index.html
+++ b/index.html
@@ -41,6 +41,9 @@
 		</body>
 <a href="sampl7.html"><img src="portforiophoto/体験デザイン１.png" width = "1285" height = "962" alt = "画像を貼り付けリンクボタンに"></a>
 				</body>
+<a href="sample6.html"><img src="portforiophoto/体験デザイン１.png" width = "1285" height = "962" alt = "画像を貼り付けリンクボタンに"></a>
+								</body>
+
 
 
 
