--- a/sample5.html
+++ b/sample5.html
@@ -8,13 +8,13 @@
 	</head>
 
 	<body>
-		<a href="index.html"><img src ="title.png" style=
+		<a href="index.html"><img src ="portforiophoto/title.png" style=
 			"margin-left: 400px;"width =200 height =40="左のコードは、サイトに写真貼りつけコード"></a>
 
 		<h1>新しい鳥の家の提案</h1>
 
-<img src ="birdhouse.png" width =1000 height =600 alt ="左のコードは、サイトに写真貼りつけコード">
-<img src ="birdhouse2.jpg" width =1000 height =600 alt ="左のコードは、サイトに写真貼りつけコード">
-<img src ="birdhouse3.jpg" width =1000 height =600 alt ="左のコードは、サイトに写真貼りつけコード">
-<img src ="birdhouse4.jpg" width =1000 height =600 alt ="左のコードは、サイトに写真貼りつけコード">
-<img src ="birdhouse5.jpg" width =1000 height =600 alt ="左のコードは、サイトに写真貼りつけコード">
+<img src ="portforiophoto/birdhouse.png" width =1000 height =600 alt ="左のコードは、サイトに写真貼りつけコード">
+<img src ="portforiophoto/birdhouse2.jpg" width =1000 height =600 alt ="左のコードは、サイトに写真貼りつけコード">
+<img src ="portforiophoto/birdhouse3.jpg" width =1000 height =600 alt ="左のコードは、サイトに写真貼りつけコード">
+<img src ="portforiophoto/birdhouse4.jpg" width =1000 height =600 alt ="左のコードは、サイトに写真貼りつけコード">
+<img src ="portforiophoto/birdhouse5.jpg" width =1000 height =600 alt ="左のコードは、サイトに写真貼りつけコード">
