--- a/index.html
+++ b/index.html
@@ -39,12 +39,11 @@
 	</body>
 <a href="sample5.html"><img src="portforiophoto/birdhouse.png" width = "1285" height = "962" alt = "画像を貼り付けリンクボタンに"></a>
 		</body>
-<a href="sample6.html"><img src="portforiophoto/P5.png" width = "1285" height = "962" alt = "画像を貼り付けリンクボタンに"></a>
+<a href="sampl7.html"><img src="portforiophoto/体験デザイン１.png" width = "1285" height = "962" alt = "画像を貼り付けリンクボタンに"></a>
 				</body>
-<a href="sample7.html"><img src="portforiophoto/体験デザイン１.png" width = "1285" height = "962" alt = "画像を貼り付けリンクボタンに"></a>
+<a href="sample6.html"><img src="portforiophoto/体験デザイン１.png" width = "1285" height = "962" alt = "画像を貼り付けリンクボタンに"></a>
 								</body>
-<a href="sample8.html"><img src="portforiophoto/1.jpg" width = "1285" height = "962" alt = "画像を貼り付けリンクボタンに"></a>
-																</body>
+
 
 
 
