--- a/sample２.html
+++ b/sample２.html
@@ -9,14 +9,14 @@
 
 	<body>
 		<a href="index.html"><img src =
-			"title.png" style="margin-left: 400px;"width =200 height =40="左のコードは、サイトに写真貼りつけコード"></a>
+			"portforiophoto/title.png" style="margin-left: 400px;"width =200 height =40="左のコードは、サイトに写真貼りつけコード"></a>
 			<body>
 
 		<h1>未来の掃除機</h1>
 
-<img src ="clean.png" width =1000 height =600 alt ="左のコードは、サイトに写真貼りつけコード">
-<img src ="clean2.png" width =1000 height =600 alt ="左のコードは、サイトに写真貼りつけコード">
-<img src ="clean3.png" width =1000 height =600 alt ="左のコードは、サイトに写真貼りつけコード">
-<img src ="clean4.png" width =1000 height =600 alt ="左のコードは、サイトに写真貼りつけコード">
-<img src ="clean7.png" width =1000 height =600 alt ="左のコードは、サイトに写真貼りつけコード">
-<img src ="clean6.png" width =1000 height =600 alt ="左のコードは、サイトに写真貼りつけコード">
+<img src ="portforiophoto/clean.png" width =1000 height =600 alt ="左のコードは、サイトに写真貼りつけコード">
+<img src ="portforiophoto/clean2.png" width =1000 height =600 alt ="左のコードは、サイトに写真貼りつけコード">
+<img src ="portforiophoto/clean3.png" width =1000 height =600 alt ="左のコードは、サイトに写真貼りつけコード">
+<img src ="portforiophoto/clean4.png" width =1000 height =600 alt ="左のコードは、サイトに写真貼りつけコード">
+<img src ="portforiophoto/clean7.png" width =1000 height =600 alt ="左のコードは、サイトに写真貼りつけコード">
+<img src ="portforiophoto/clean6.png" width =1000 height =600 alt ="左のコードは、サイトに写真貼りつけコード">
