--- a/sample3.html
+++ b/sample3.html
@@ -8,7 +8,7 @@
 	</head>
 
 	<body>
-	<a href="index.html"><img src ="portforiophoto/title.png" style=
+	<a href="index.html"><img src ="title.png" style=
 		"margin-left: 400px;"width =200 height =40="左のコードは、サイトに写真貼りつけコード"></a>
 		<h1>新しいギフトボックスの提案</h1>
 
