--- a/sample２.html
+++ b/sample２.html
@@ -9,7 +9,7 @@
 
 	<body>
 		<a href="index.html"><img src =
-			"portforiophoto/title.png" style="margin-left: 400px;"width =200 height =40="左のコードは、サイトに写真貼りつけコード"></a>
+			"title.png" style="margin-left: 400px;"width =200 height =40="左のコードは、サイトに写真貼りつけコード"></a>
 			<body>
 
 		<h1>未来の掃除機</h1>
