--- a/sample3.html
+++ b/sample3.html
@@ -12,5 +12,5 @@
 		"margin-left: 400px;"width =200 height =40="左のコードは、サイトに写真貼りつけコード"></a>
 		<h1>新しいギフトボックスの提案</h1>
 
-<img src ="portforiophoto/hakuhodo.png" width =1000 height =600 alt ="左のコードは、サイトに写真貼りつけコード">
-<img src ="portforiophoto/hakuhodo2.png" width =1000 height =600 alt ="左のコードは、サイトに写真貼りつけコード">
+<img src ="hakuhodo.png" width =1000 height =600 alt ="左のコードは、サイトに写真貼りつけコード">
+<img src ="hakuhodo2.png" width =1000 height =600 alt ="左のコードは、サイトに写真貼りつけコード">
