--- a/sample4.html
+++ b/sample4.html
@@ -13,8 +13,8 @@
 
 		<h1>自分を表すロゴマーク</h1>
 
-<img src ="portforiophoto/logo REALCRAFT.png" width =1000 height =600 alt ="左のコードは、サイトに写真貼りつけコード">
-<img src ="portforiophoto/logo REALCRAFT2.png" width =1000 height =600 alt ="左のコードは、サイトに写真貼りつけコード">
-<img src ="portforiophoto/logo REALCRAFT3.png" width =1000 height =600 alt ="左のコードは、サイトに写真貼りつけコード">
-<img src ="portforiophoto/logo REALCRAFT4.png" width =1000 height =600 alt ="左のコードは、サイトに写真貼りつけコード">
-<img src ="portforiophoto/logo REALCRAFT5.png" width =1000 height =600 alt ="左のコードは、サイトに写真貼りつけコード">
+<img src ="logo REALCRAFT.png" width =1000 height =600 alt ="左のコードは、サイトに写真貼りつけコード">
+<img src ="logo REALCRAFT2.png" width =1000 height =600 alt ="左のコードは、サイトに写真貼りつけコード">
+<img src ="logo REALCRAFT3.png" width =1000 height =600 alt ="左のコードは、サイトに写真貼りつけコード">
+<img src ="logo REALCRAFT4.png" width =1000 height =600 alt ="左のコードは、サイトに写真貼りつけコード">
+<img src ="logo REALCRAFT5.png" width =1000 height =600 alt ="左のコードは、サイトに写真貼りつけコード">
