--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 	</body>
 <a href="sample5.html"><img src="birdhouse.png" width = "1285" height = "962" alt = "画像を貼り付けリンクボタンに"></a>
 		</body>
-<a href="sampl7.html"><img src="体験デザイン１.png" width = "1285" height = "962" alt = "画像を貼り付けリンクボタンに"></a>
+<a href="sample7.html"><img src="体験デザイン１.png" width = "1285" height = "962" alt = "画像を貼り付けリンクボタンに"></a>
 				</body>
 <a href="sample6.html"><img src="P5.png" width = "1285" height = "962" alt = "画像を貼り付けリンクボタンに"></a>
 								</body>
