--- a/index.html
+++ b/index.html
@@ -43,6 +43,8 @@
 				</body>
 <a href="sample6.html"><img src="P5.png" width = "1285" height = "962" alt = "画像を貼り付けリンクボタンに"></a>
 								</body>
+<a href="sample8.html"><img src="1.jpg" width = "1285" height = "962" alt = "画像を貼り付けリンクボタンに"></a>
+								</body>
 
 
 
