--- a/sample5.html
+++ b/sample5.html
@@ -14,7 +14,7 @@
 		<h1>新しい鳥の家の提案 </h1>
 
 <img src ="birdhouse.png" width =1000 height =600 alt ="左のコードは、サイトに写真貼りつけコード">
-<img src ="birdhouse2.jpg" width =1000 height =600 alt ="左のコードは、サイトに写真貼りつけコード">
-<img src ="birdhouse3.jpg" width =1000 height =600 alt ="左のコードは、サイトに写真貼りつけコード">
-<img src ="birdhouse4.jpg" width =1000 height =600 alt ="左のコードは、サイトに写真貼りつけコード">
-<img src ="birdhouse5.jpg" width =1000 height =600 alt ="左のコードは、サイトに写真貼りつけコード">
+<img src ="birdhouse2.JPG" width =1000 height =600 alt ="左のコードは、サイトに写真貼りつけコード">
+<img src ="birdhouse3.JPG" width =1000 height =600 alt ="左のコードは、サイトに写真貼りつけコード">
+<img src ="birdhouse4.JPG" width =1000 height =600 alt ="左のコードは、サイトに写真貼りつけコード">
+<img src ="birdhouse5.JPG" width =1000 height =600 alt ="左のコードは、サイトに写真貼りつけコード">
