--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	</head>
 
 	<body>
-<img src="紹介文２改良.png" width = "1285" height = "300" alt = "画像を貼り付けリンクボタンに"/>
+<img src="紹介文改良２.png" width = "1285" height = "300" alt = "画像を貼り付けリンクボタンに"/>
 <a href="sample4.html"><img src="logo REALCRAFT.png" width = "1285" height = "962" alt = "画像を貼り付けリンクボタンに"></a>
 	</body>
 <a href="sample２.html"><img src="clean.png" width = "1285" height = "962" alt = "画像を貼り付けリンクボタンに"></a>
