--- a/sample4.html
+++ b/sample4.html
@@ -14,6 +14,7 @@
 		<h1>自分を表すロゴマーク</h1>
 
 <img src ="logo REALCRAFT.png" width =1000 height =600 alt ="左のコードは、サイトに写真貼りつけコード">
+<img src ="logo REALCRAFT６.png" width =1000 height =600 alt ="左のコードは、サイトに写真貼りつけコード">
 <img src ="logo REALCRAFT2.png" width =1000 height =600 alt ="左のコードは、サイトに写真貼りつけコード">
 <img src ="logo REALCRAFT3.png" width =1000 height =600 alt ="左のコードは、サイトに写真貼りつけコード">
 <img src ="logo REALCRAFT4.png" width =1000 height =600 alt ="左のコードは、サイトに写真貼りつけコード">
